--- a/src/app/components/pokemons-list/pokemons-list.component.html
+++ b/src/app/components/pokemons-list/pokemons-list.component.html
@@ -1,13 +1,22 @@
 <div class="pokemon--grid">
-    <mat-card class="pokemon--grid__box" *ngFor="let pokemon of pokemons">
-        <mat-card-title-group>
-            <mat-card-title>{{pokemon.name}}</mat-card-title>
-            <mat-card-subtitle>{{pokemon.types[0].type.name}}</mat-card-subtitle>
-            <img mat-card-md-image [src]="pokemon.sprites.front_default">
-        </mat-card-title-group>
-        <mat-card-content>
-            #{{pokemon.id}}
-        </mat-card-content>
-    </mat-card>
-
+    <div *ngFor="let pokemon of pokemons | paginate: {itemsPerPage: 10, currentPage: page, totalItems: totalPokemones} ">
+        <div class="box" (click)="getPokemon(pokemon)">
+            <img [src]="pokemon.sprites.front_default ">
+            <h2>{{pokemon.name}}</h2>
+            <p>
+                <b>Tipo: </b>{{pokemon.types[0].type.name}}
+            </p>
+            <p>
+                <b>Alto:: </b>{{pokemon.height}}
+            </p>
+            <p>
+                <b>Vida: </b>{{pokemon.stats[0].base_stat}}
+            </p>
+            <p>
+                <b>Poder de ataque: </b>{{pokemon.stats[1].base_stat}}
+            </p>
+        </div>
+    </div>
 </div>
+
+<pagination-controls (pageChange)="page=$event; pokemons=[ ]; getPokmons() "></pagination-controls>
