--- a/src/app/pages/pokemon/pokemon.component.html
+++ b/src/app/pages/pokemon/pokemon.component.html
@@ -1,1 +1,37 @@
-<p>pokemon works!</p>
+<div class="container">
+    <div class="card">
+        <div class="left-column background1-left-column">
+            <div>
+                <img src="{{pokemonImg}}" alt="">
+
+            </div>
+
+            <i class="fa fa-github"></i>
+        </div>
+
+        <div class="right-column">
+            <div>
+                <h2>{{pokemon.name}}</h2>
+                <h6>#{{pokemon.id}}</h6>
+
+            </div>
+            <h3>Tipo: {{pokemonType}}</h3>
+            <h3>Height: {{pokemon.height}}</h3>
+            <h3>Weight: {{pokemon.weight}}</h3>
+        </div>
+
+    </div>
+
+    <div class="card">
+
+        <div class="right-column">
+            <div>
+                <h2>Estadisticas</h2>
+                <h2>{{pokemonStats}}</h2>
+                <mat-progress-bar mode="determinate" value="{{pokemonStats}}"></mat-progress-bar>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sint??</p>
+        </div>
+
+    </div>
+</div>
