--- a/src/app/components/pokemons-list/pokemons-list.component.html
+++ b/src/app/components/pokemons-list/pokemons-list.component.html
@@ -7,13 +7,10 @@
                 <b>Tipo: </b>{{pokemon.types[0].type.name}}
             </p>
             <p>
-                <b>Alto:: </b>{{pokemon.height}}
+                <b>HP: </b>{{pokemon.stats[0].base_stat}}
             </p>
             <p>
-                <b>Vida: </b>{{pokemon.stats[0].base_stat}}
-            </p>
-            <p>
-                <b>Poder de ataque: </b>{{pokemon.stats[1].base_stat}}
+                <b>ataque: </b>{{pokemon.stats[1].base_stat}}
             </p>
         </div>
     </div>
