[ADD] Final, detalles

--- a/src/app/pages/pokemon/pokemon.component.html
+++ b/src/app/pages/pokemon/pokemon.component.html
@@ -1,3 +1,6 @@
+<div class="boton--back">
+    <button (click)="home()"><----- Regresar</button>
+</div>
 <div class="container">
     <div class="card">
         <div class="left-column background1-left-column">
