--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -42,12 +42,13 @@ box-shadow:  7px 7px 14px #bebebe,
 }
 
 .entrenador-detail {
+  color: $ligth;
   position: fixed;
   top: 0;
   left: 50%;
   bottom: 0;
   right: 0;
-  background-color: #e0e0e0;
+  background-color:$darkPrincipal;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -82,16 +83,16 @@ box-shadow:  7px 7px 14px #bebebe,
 
 .botton--cerrar{
   & button{
-    padding: 5px;
+    padding: 15px;
     margin-left: 25px;
     margin-top: 30px;
     border: none;
     font-size: 25px;
   color: red;
-  border-radius: 76px;
-background: #e0e0e0;
-box-shadow:  9px 9px 18px #9b9b9b,
-             -9px -9px 18px #ffffff;
+border-radius: 36px;
+background: #212121;
+box-shadow:  11px 11px 23px #151515,
+             -11px -11px 23px #2d2d2d;
     }
 
   }
