--- a/src/app/components/pokemons-list/pokemons-list.component.html
+++ b/src/app/components/pokemons-list/pokemons-list.component.html
@@ -1,5 +1,8 @@
+<div class="input--search">
+    <input type="text" name="filterPost" placeholder="Buscar ..." [(ngModel)]="filterPost">
+</div>
 <div class="pokemon--grid">
-    <div *ngFor="let pokemon of pokemons | paginate: {itemsPerPage: 10, currentPage: page, totalItems: totalPokemones} ">
+    <div *ngFor="let pokemon of pokemons | paginate: {itemsPerPage: 10, currentPage: page, totalItems: totalPokemones} | filter:filterPost">
         <div class="box" (click)="getPokemon(pokemon)">
             <img [src]="pokemon.sprites.front_default ">
             <h2>{{pokemon.name}}</h2>
