--- a/src/app/pages/pokemon/pokemon.component.scss
+++ b/src/app/pages/pokemon/pokemon.component.scss
@@ -23,6 +23,21 @@
     align-items: center;
 }
 
+.boton--back{
+  & button{
+    color: red;
+    margin-top: 23px;
+    margin-left: 30px;
+    padding: 10px;
+    font-size: 28px;
+    border: none;
+    border-radius: 41px;
+background: #e0e0e0;
+box-shadow:  11px 11px 21px #989898,
+             -11px -11px 21px #ffffff;
+    }
+  }
+
 .card {
 border-radius: 50px;
 background: #e0e0e0;
