--- a/src/app/components/pokemons-list/pokemons-list.component.html
+++ b/src/app/components/pokemons-list/pokemons-list.component.html
@@ -5,7 +5,7 @@
     <div *ngFor="let pokemon of pokemons | paginate: {itemsPerPage: 10, currentPage: page, totalItems: totalPokemones} | filter:filterPost">
         <div class="box" (click)="getPokemon(pokemon)">
             <img [src]="pokemon.sprites.front_default ">
-            <h2>{{pokemon.name}}</h2>
+            <h2>{{pokemon.name}} #{{pokemon.id}}</h2>
             <p>
                 <b>Tipo: </b>{{pokemon.types[0].type.name}}
             </p>
