[FIX] grid home

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -4,6 +4,6 @@
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
   </button>
     <button class="persona--nav" (click)="perfil()">
-    <img src="../../../assets/images/persona.png" alt="">
+    <img src="https://i.ibb.co/WnNnqXd/entrenador-pokemon.png" alt="">
   </button>
 </mat-toolbar>
