--- a/src/app/components/pokemons-list/pokemons-list.component.scss
+++ b/src/app/components/pokemons-list/pokemons-list.component.scss
@@ -9,7 +9,7 @@
 
   & .box {
     width: 100%;
-    height: 300px;
+    height: 100%;
     border-radius: 50px;
     background: #e0e0e0;
     box-shadow: 8px 8px 16px #afafaf,
@@ -19,7 +19,7 @@
     text-transform: capitalize;
 
     & img {
-      max-width: 100px;
+      width: 200px;
       display: block;
       margin: 0 auto;
     }
